--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "A cryptocurrency trading bot using GDAX API(coinbase pro)",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alen George",
   "license": "ISC",
   "dependencies": {
-    "coinbase-pro": "^0.9.0"
+    "coinbase-pro": "^0.9.0",
+    "commander": "^5.1.0"
   }
 }
